# smart-bus-phuket

./: Cargo.toml  config.toml  fetch_data.sh
.cargo/: config.toml
data/: buses.json  schedule.json
src/: config.rs  domain.rs  lookup.rs  main.rs  services.rs
src/domain/: bus.rs  bus_operate.rs  bus_stop.rs  buses.json  buses.rs  coordinates.rs  location.rs  ride.rs  route_direction.rs  routes.json  routes.rs  schedule.json  schedule.rs  stops.json  stops.rs  terminal.rs
src/services/: bus_service.rs  config_service.rs  fetch_service.rs  ride_service.rs  route_service.rs
