[package]
name = "smart-bus-phuket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["async", "toml"] }
futures-util = "0.3.30"
geoutils = "0.5.1"
itertools = "0.12.1"
rand = "0.8.5"
rangemap = { version = "1.5.0", features = ["nightly"] }
rstest = "0.18.2"
rust_socketio = { version = "0.4.4", features = [
    "async",
    "async-callbacks",
    "async-stream",
    "tokio",
    "futures-util",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde-this-or-that = { version = "0.4.2", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_with = "3.6.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["tokio-native-tls"] }
ureq = { version = "2.9.6", features = ["json"] }
